Various typos, restructure, formatting.

--- a/00_vorbemerkungen.tex
+++ b/00_vorbemerkungen.tex
@@ -3,7 +3,7 @@
 
 \section*{Quellen}
 
-Viele der rein mathematischen Bemerkungen, Aussagen und Beispiele sind Abgeleitet aus \cite{merziger2024repetitorium} und \cite{gollmann2017mathematik}. Im Literaturverzeichnis finden sich Selbstverständlich andere zitierte Arbeiten.
+Viele der rein mathematischen Bemerkungen, Aussagen und Beispiele sind Abgeleitet aus \cite{merziger2024repetitorium} und \cite{gollmann2017mathematik}. Im Literaturverzeichnis finden sich selbstverständlich andere zitierte Arbeiten.
 
 \section*{Errata}
 
@@ -11,7 +11,22 @@ Bezüglich etwaigen Fehlern bitte einen \emph{issue} auf github zu eröffnen: \h
 
 Sehr gerne können Fehler, Korrekturen und Ergänzungen auch selbst geändert werden und ein \emph{pull request} gemacht werden.
 
-\section*{Soundbeispiele}
+\section*{Hinweise zur Lektüre}
+
+Am Ende dieses Dokuments befinden sich einige praktische Tabellen:
+\begin{itemize}
+\item Ein Python cheat-sheet, Abschnitt \ref{sec:pythonCheat}
+\item Eine Tabelle des Griechischen Alphabets, Abschnitt \ref{sec:greekAlph}
+\item Eine kleine Formelsammlung, Abschnitt \ref{sec:formelsam}
+\item Nicht zuletzt ein Glossar/Index, Abbildungs- und Literaturverzeichnis etc.
+\end{itemize} 
+
+Dieses Dokument benutzt unter anderem folgende Konventionen um verschiedenen Hervorhebungen zu erzielen. 
+\important{Besonders Wichtiges und Definitionen}
+\example{Durchgerechnete Beispiele}
+\praxis{Praxisbezug in der Audiotechnik}
+
+\subsection*{Soundbeispiele}
 
 Soundbeispiele sind in der Programmiersprache \texttt{FAUST} erstellt. Durch click auf das Lautsprecher Symbol sollte sich ein Browser öffnen in dem der entsprechende Klang in Echtzeit berechnet wird. Manche der Beispiele bieten Interaktionsmöglichkeit durch diverse Slider etc. Hier ein Beispiel:
 
@@ -28,8 +43,7 @@ Soundbeispiele sind in der Programmiersprache \texttt{FAUST} erstellt. Durch cli
 
 Geneigten LeserInnen sei besonders empfohlen auch auf den 'Diagramm' button zu clicken um ein Blockdiagramm zu sehen dass dem Code/dem jeweiligen Konzept Entspricht.
 
-Es kann nicht garantiert werden dass dieses Online service ständig online ist und die Details der Programmiersprache \texttt{FAUST} sind \textbf{nicht} Teil des Kurses.
-
+Es kann nicht garantiert werden dass dieses Online-Service ständig online ist und die Details der Programmiersprache \texttt{FAUST} sind \textbf{nicht} Teil des Kurses.
 
 \section*{Contributors}
 Hier finden sich hoffentlich bald Menschen die diesen Text gelesen haben und Verbesserungsvorschläge gemacht haben.
