--- a/Anhang_A.tex
+++ b/Anhang_A.tex
@@ -3,7 +3,7 @@
 
 \input{pythonCheat}
 
-\section*{Griechisches Alphabet}
+\section*{Griechisches Alphabet}\label{sec:greekAlph}
 \begin{table}[H]
     \centering
     \begin{tabular}{|c|c|c|p{7cm}|}
@@ -72,7 +72,7 @@
 \end{table}
 
 
-\section*{Formelsammlung}
+\section*{Formelsammlung}\label{sec:formelsam}
 
 \mygrid{Funktionen}{
     $-sinx = sin(-x)$ & $cos(-x) = cosx$ \\ \hline
