--- a/lesson2.tex
+++ b/lesson2.tex
@@ -249,7 +249,7 @@ Der Funktionsverlauf des Ausdrucks in Gleichung \ref{eq:simpleNegExp} kann in Ab
 
 Zurückgreifend auf die Definition aus Gleichung \ref{eq:rationaleFunktion} lässt sich allgemeiner sagen dass der Definitionsbereich $D$ von $R$ durch die Menge an Zahlen beschnitten wird an denen das Nenner-Polynom $P_n$ den Wert 0 annimmt: $D(f) = \mathbb{R} \setminus \{x | P_n(x)=0\}$. 
 
-\important{Speziell in der Analyse von Filtern interessieren wir uns für Nullstellen und Polstellen. Nullstellen sind hier schlicht die Nullstellen des Zähler-Polynoms. Polstellen sind die Nullstellen des Nenner-Polynoms.}
+\praxis{Speziell in der Analyse von Filtern interessieren wir uns für Nullstellen und Polstellen. Nullstellen sind hier schlicht die Nullstellen des Zähler-Polynoms. Polstellen sind die Nullstellen des Nenner-Polynoms.}
 
 \begin{figure}[H]
 	\centering
