--- a/lesson5.tex
+++ b/lesson5.tex
@@ -1,4 +1,7 @@
 %!TEX root = main.tex
-\chapter{Diskrete Mathematik \& Reihen}
+\chapter{Lineare Algebra, Vektoren und Matrizen}
+\todo{Probabilistische system entwicklung, https://www.youtube.com/watch?v=K-8F\_zDMDUI\&list=PLMrJAkhIeNNTYaOnVI3QpH7jgULnAmvPA\&index=3}
+\todo[inline]{Digital Audio als vektor, Vector scope, stereo sachen, Rotationsmatrix, Hadamardmatrix, Householdermatrix,  state space formulations, modal analyse}
 
-Taylor Reihe, Fourier Reihe, z transform, faltung, newton-raphson
+
+
