--- a/lesson4.tex
+++ b/lesson4.tex
@@ -1,4 +1,4 @@
 %!TEX root = main.tex
-\chapter{Lineare Algebra, Vektoren und Matrizen}
+\chapter{Beweise}
 
-\todo[inline]{Digital Audio als vektor, Vector scope, stereo sachen, Rotationsmatrix, Hadamardmatrix, Householdermatrix,  state space formulations, modal analyse}
+% \todo[inline]{Digital Audio als vektor, Vector scope, stereo sachen, Rotationsmatrix, Hadamardmatrix, Householdermatrix,  state space formulations, modal analyse}
