--- a/lesson6.tex
+++ b/lesson6.tex
@@ -1,3 +1,10 @@
 %!TEX root = main.tex
-\chapter{Lineare Algebra, Vektoren und Matrizen}
-\todo{Probabilistische system entwicklung, https://www.youtube.com/watch?v=K-8F\_zDMDUI\&list=PLMrJAkhIeNNTYaOnVI3QpH7jgULnAmvPA\&index=3}
+\chapter{Diskrete Mathematik \& Reihen}
+
+Taylor Reihe, Fourier Reihe, z transform, faltung, newton-raphson
+
+% %!TEX root = main.tex
+% \chapter{Lineare Algebra, Vektoren und Matrizen}
+% \todo{Probabilistische system entwicklung, https://www.youtube.com/watch?v=K-8F\_zDMDUI\&list=PLMrJAkhIeNNTYaOnVI3QpH7jgULnAmvPA\&index=3}
+% \todo[inline]{Digital Audio als vektor, Vector scope, stereo sachen, Rotationsmatrix, Hadamardmatrix, Householdermatrix,  state space formulations, modal analyse}
+
