--- a/lesson3.tex
+++ b/lesson3.tex
@@ -165,7 +165,7 @@ So wie die Multiplikation in Kartesischer Darstellung wesentlich komplizierter w
 
 \section{Konjugiert Komplexe Zahl}
 \index{konjugiert komplex}
-Gegeben $z_1 = a + bi$ wir die zahl $z_2 = a - bi = \overline{z_1}$ als konjugiert komplex bezeichnet. Oder in Exponentialform:
+Gegeben $z_1 = a + bi$ wir die zahl $z_2 = a - bi = \overline{z_1}$\footnote{Die konjugiert konplexe Zahl von $z$ wird hier als $\overline{z}$ geschrieben. In der Literatur findet man auch $z^{*}$.} als konjugiert komplex bezeichnet. Oder in Exponentialform:
 $$z = re^{\varphi i} \iff \overline{z} = re^{-\varphi i}$$
 
 \begin{figure}[h]
