--- a/lesson4.tex
+++ b/lesson4.tex
@@ -2,3 +2,14 @@
 \chapter{Lineare Algebra, Vektoren und Matrizen}
 
 \todo[inline]{Digital Audio als vektor, Vector scope, stereo sachen, Rotationsmatrix, Hadamardmatrix, Householdermatrix,  state space formulations, modal analyse}
+
+
+\section{Skalarprodukt}
+Auch 'Punktprodukt', engl. 'Dot product'.
+$$\vec{a}\cdot \vec{b} = |\vec{a}|\cdot |\vec{b}|\cdot cos(\alpha) = a_x b_x + a_y b_y$$
+Siehe \citep[p.~45]{Westermmann2008}  für herleitung.
+
+\section{Kreutzprodukt}
+Auch 'Vektorprodukt'. 
+$$ \vec{c} = \vec{a} \times \vec{b}$$
+Nur in $\mathbb{R}^3$ definiert!
