--- a/lesson3.tex
+++ b/lesson3.tex
@@ -233,9 +233,12 @@ Out[6]: (2+3j)
 \todo[inline]{ polynome mit reellen koeefizienten -> kompl konj oder reelle nullstellen. Division von compl zahlen durch mult mit kompl. konj., $e^z$, $ln z$, python, 3d plots of complex functions}
 
 \section{Anwendungen}\label{sec:anwendungen}
-\todo[]{TODO}
+
+\todo[]{TODO. Fourier Transformation, Hilbert Transformation, Analytisches Signal, Modal analyse, }
 
 \section{Aufgaben}
-\todo[]{TODO}
+\begin{enumerate}
+\item TODO
+\end{enumerate}
 
 
