--- a/lesson4.tex
+++ b/lesson4.tex
@@ -1,3 +1,9 @@
 %!TEX root = main.tex
 \chapter{Beweise}
 
+\section{Induktion}
+
+\section{Aufgaben}
+\begin{enumerate}
+\item TODO
+\end{enumerate}
