--- a/lesson6.tex
+++ b/lesson6.tex
@@ -8,3 +8,7 @@ Taylor Reihe, Fourier Reihe, z transform, faltung, newton-raphson
 % \todo{Probabilistische system entwicklung, https://www.youtube.com/watch?v=K-8F\_zDMDUI\&list=PLMrJAkhIeNNTYaOnVI3QpH7jgULnAmvPA\&index=3}
 % \todo[inline]{Digital Audio als vektor, Vector scope, stereo sachen, Rotationsmatrix, Hadamardmatrix, Householdermatrix,  state space formulations, modal analyse}
 
+\section{Aufgaben}
+\begin{enumerate}
+\item TODO
+\end{enumerate}
