--- a/lesson8.tex
+++ b/lesson8.tex
@@ -1,2 +1,7 @@
 %!TEX root = main.tex
 \chapter{Differential und Integralrechnung 2}
+
+\section{Aufgaben}
+\begin{enumerate}
+\item TODO
+\end{enumerate}
