--- a/lesson7.tex
+++ b/lesson7.tex
@@ -1,3 +1,8 @@
 %!TEX root = main.tex
 \chapter{Differential und Integralrechnung}
 \todo[inline]{https://www.youtube.com/watch?v=X9t-u87df3o\&list=PLBE9407EA64E2C318}
+
+\section{Aufgaben}
+\begin{enumerate}
+\item TODO
+\end{enumerate}
