--- a/main.tex
+++ b/main.tex
@@ -505,7 +505,7 @@ literate={ϵ}{$\epsilon$}1
 \include{lesson2}
 \include{lesson3}
 \include{lesson4}
-% \include{lesson5}
+\include{lesson5}
 % \include{lesson6}
 % \part{Semester II}
 % \include{lesson7}
