--- a/lesson3.tex
+++ b/lesson3.tex
@@ -186,6 +186,8 @@ In der Audiotechnik sind komplexwertige Funktionen wichtig. Ein Beispiel wäre d
 	\label{fig:komp_3D}
 \end{figure}
 
+\todo[inline]{Python beispiel um betrag zu plotten.}
+
 
 \section{Komplexe Zahlen in Python}
 
