--- a/pythonCheat.tex
+++ b/pythonCheat.tex
@@ -43,3 +43,17 @@
 
     \end{tabular}
 \end{table}
+
+\subsection*{Sound I/O}
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|p{3cm}|p{6cm}|p{6cm}|}
+        \hline
+    \textbf{Befehl} & \textbf{Beispiel} & \textbf{Kommentar} \\ \hline
+    
+    \texttt{import soundfile as sf} & \texttt{import soundfile as sf} & Import des \texttt{soundfile} Pakets für Audio Datei Verarbeitung. \\ \hline
+    \texttt{sf.write()} & \texttt{sf.write('test.wav', a, 44100)} & Schreibt den array \texttt{a} in das file 'test.wav' mit samplerate 44100 \\ \hline
+    \texttt{sf.read()} & \texttt{x,sr =sf.read('test.wav')} & Lädt das file 'test.wav'. \texttt{x} enthält die sample werte, \texttt{sr} die sampingrate. \\ \hline
+
+    \end{tabular}
+\end{table}
