--- a/lesson2.tex
+++ b/lesson2.tex
@@ -438,4 +438,9 @@ Out[1]: 1 + 1/(x + 1)
 \begin{enumerate}
 \item Versuchen Sie Python Code zu entwerfen der die Funktion in Abbildung \ref{fig:functManipul} erzeugt.
 \item In Abschnitt \ref{sec:manipFuncts} wurde die Auswirkung von verschiedenen 'Manipulationen' besprochen unter der Annahme dass das argument der Funktion die Zeitachse darstellt ($f(t)$ wobei $t$ die zeit in Sekunden). Welche Interpretationen drängen sich auf unter der Annahme dass das Argument die Frequenzachse ist, also $f(\omega)$ wobei $\omega$ die Frequenz? An dieser Stelle ist es nicht wichtig ob es sich um die Kreisfrequenz, normierte Frequenz oder Frequenz in Hz handelt.
+
+\item $4^x = 262144$, löse für $x$.
+
+\item Sie finden folgende funktion vor $x(t) = u(t-3) \cdot sin(t) \cdot \frac{1}{t-3}$. Plotten / Skizzieren sie diese. Könnten Sie sie zeitlich 'umdrehen' (spiegelung um die ordinate).
+
 \end{enumerate}
