small addition to cheat

--- a/pythonCheat.tex
+++ b/pythonCheat.tex
@@ -46,6 +46,7 @@ Out[26]: 25
     \texttt{sp.roots()} & \texttt{nullst = sp.roots(p)} & Findet die Nullstellen des polynoms \texttt{p}. \\ \hline
     \texttt{sp.factor()} & \texttt{factors = sp.factor(p)} & Linearfaktor Zerlegung des polynoms \texttt{p}. \\ \hline
     \texttt{sp.apart()} & \texttt{brueche = sp.apart(p, full=True).doit()} & Partialbruch Zerlegung polynoms \texttt{p}. \\ \hline
+    \texttt{p.as\_numer\_denom()} & \texttt{num, den = p.as\_numer\_denom()} & Trennung in Zähler und Nenner eines Polyn. \texttt{p}. \\ \hline
 
     \end{tabular}
 \end{table}
